--- a/Workshop/navigasi/Form.html
+++ b/Workshop/navigasi/Form.html
@@ -17,84 +17,85 @@
             <button>cari</button> <br>
             <a href="../index.html">Home</a>
         </nav>
-        <br>
-        <article>
-            <table border="1px">
-                <thead>
-                    <tr>
-                        <th colspan="5">
-                            <h3>
-                                Employee Survey Form
-                            </h3>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td colspan="2">
-                            <th>Agree</th>
-                            <th>Disagree</th>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>I understand the mission and goals of the company</td>
-                        <td>
-                            <th>
-                                <input name="1" type="radio" value="Agree" /> 
-                            </th>
-                            <th>
-                                <input name="1" type="radio" value="Disagree" />
-                            </th>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>I see a clear link between my work and the mission and goals of the company</td>
-                        <td>
-                            <th>
-                                <input name="2" type="radio" value="Agree" /> 
-                            </th>
-                            <th>
-                                <input name="2" type="radio" value="Disagree" />
-                            </th>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>I am inspired by the team to do my best work</td>
-                        <td>
-                            <th>
-                                <input name="3" type="radio" value="Agree" /> 
-                            </th>
-                            <th>
-                                <input name="3" type="radio" value="Disagree" />
-                            </th>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>I have a good understanding of the informal processes and structures at the company</td>
-                        <td>
-                            <th>
-                                <input name="4" type="radio" value="Agree" /> 
-                            </th>
-                            <th>
-                                <input name="4" type="radio" value="Disagree" />
-                            </th>
-                        </td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td>&nbsp;</td>
-                        <td>Personal</td>
-                        <td>Office</td>
-                    </tr>
-                </tfoot>
-            </table>
-        </article>
 
+        <br>
+
+        <main>
+            <article>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="5">
+                                <h3>
+                                    Employee Survey Form
+                                </h3>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="2">
+                                <th>Agree</th>
+                                <th>Disagree</th>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>I understand the mission and goals of the company</td>
+                            <td>
+                                <th>
+                                    <input name="1" type="radio" value="Agree" /> 
+                                </th>
+                                <th>
+                                    <input name="1" type="radio" value="Disagree" />
+                                </th>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>I see a clear link between my work and the mission and goals of the company</td>
+                            <td>
+                                <th>
+                                    <input name="2" type="radio" value="Agree" /> 
+                                </th>
+                                <th>
+                                    <input name="2" type="radio" value="Disagree" />
+                                </th>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>I am inspired by the team to do my best work</td>
+                            <td>
+                                <th>
+                                    <input name="3" type="radio" value="Agree" /> 
+                                </th>
+                                <th>
+                                    <input name="3" type="radio" value="Disagree" />
+                                </th>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>I have a good understanding of the informal processes and structures at the company</td>
+                            <td>
+                                <th>
+                                    <input name="4" type="radio" value="Agree" /> 
+                                </th>
+                                <th>
+                                    <input name="4" type="radio" value="Disagree" />
+                                </th>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br>
+
+                <button>Simpan</button>
+                <br>
+            </article>
+        </main>
+        <hr>
         <footer>
-            <p>&copy; HTML CheatSheet</p>
+            <p>&copy; Febri Putra Tris Budiono</p>
             <address>
-            Contact <a href="mailto:me@htmlg.com">me</a>
+                Contact <a href="https://github.com/FebriPutraTrisBudiono">me</a>
             </address>
         </footer>
     </center>
